--- a/src/Layout/MainNavigation.module.css
+++ b/src/Layout/MainNavigation.module.css
@@ -16,7 +16,6 @@
 .main_nav_link:visited {
     text-decoration: none;
     color: var(--grey-2);
-    font-weight: 500;
     font-size: 2rem;
 
     transition: all 300ms;
@@ -29,20 +28,37 @@
     border-bottom: 0.2rem solid #fff;
 }
 
-.main_nav_link.nav_cta:link,
-.main_nav_link.nav_cta:visited {
+.role_button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 0.5rem;
+
+    font-weight: 300;
+    font-size: 2rem;
     width: 14rem;
     height: 5.8rem;
-    padding: 1.2rem 2.4rem;
-    border-radius: 9px;
-    color: #fff;
+    color: white;
+
     background-color: var(--grey-2);
+
+    border-radius: 0.9rem;
+    border: none;
+
+    transition: all 300ms;
 }
 
-.main_nav_link.nav_cta:hover,
-.main_nav_link.nav_cta:active {
-    border: none;
-    background-color: transparent;
-    color: var(--grey-3);
-    box-shadow: inset 0 0 0 3px var(--grey-2);
+.role_button:hover {
+    color: var(--grey-2);
+    background-color: var(--primary);
+    box-shadow: inset 0 0 0 0.4rem var(--grey-2);
+}
+
+.role_button span {
+    font-weight: 500;
+    letter-spacing: 0.1rem;
+}
+
+.icon {
+    font-size: 2.6rem;
 }
