--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@
 }
 
 :root {
-    --primary: #fecb00d0;
+    --primary: #fecb00;
     --shade-1: #e8ba00;
     --shade-2: #fecb0092;
     --tint-1: #ffe066;
