finished building slider, made images so they can't be highlighted

--- a/src/Components/HeroSeciton/HeroSection.module.css
+++ b/src/Components/HeroSeciton/HeroSection.module.css
@@ -35,6 +35,13 @@
     height: 90%;
     padding-left: 0;
 
+    /* so image can't be highlighted */
+    -khtml-user-select: none;
+    -o-user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
+
     pointer-events: none;
 }
 
