--- a/src/Components/Search.module.css
+++ b/src/Components/Search.module.css
@@ -2,10 +2,10 @@
     display: flex;
     align-items: center;
     background-color: white;
-    border-radius: 1.5rem;
+    border-radius: 2rem;
     box-shadow: 0 0.063rem 0.375rem rgba(32 33 36 0.28);
     padding: 0.5rem;
-    width: 18.75rem;
+    width: 40rem;
     margin: 0 auto;
 }
 .input {
@@ -19,7 +19,7 @@
 .button {
     border: none;
     outline: none;
-    background-color: #fecb00;
+    background-color: var(--primary);
     border-radius: 1.5rem;
     padding: 0.5rem;
     margin-left: 0.5rem;
