--- a/src/Pages/Header.css
+++ b/src/Pages/Header.css
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     width: 80px;
-    background-color: #f2f2f2;
+    background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
