--- a/src/Components/RenderMedia.css
+++ b/src/Components/RenderMedia.css
@@ -55,3 +55,17 @@ ul {
     color: var(--primary);
     margin-top: 0.313rem;
 }
+.black-container {
+    position: fixed;
+    top: 0;
+    right: 0rem;
+    width: 10rem;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+}
+.button {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+}
