--- a/src/Components/AddMediaForm/AddMediaForm.module.css
+++ b/src/Components/AddMediaForm/AddMediaForm.module.css
@@ -21,7 +21,7 @@
 
 .form input,
 .form select {
-    padding: 1rem 0.5rem;
+    padding: 0.7rem 0.5rem;
     background-color: var(--primary);
     font-size: 1.5rem;
     font-weight: 500;
@@ -53,7 +53,7 @@
     justify-content: center;
     background-color: var(--grey-4);
     border-radius: 1rem;
-    width: 22%;
+    width: 25%;
 }
 
 .image_holder img {
@@ -61,20 +61,19 @@
     max-height: 100%;
 }
 
-.image_goes_here {
+.genres {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.genre_checkbox_group {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 2rem;
-    font-size: 2rem;
+    gap: 1rem;
 }
 
-.image_goes_here svg {
-    font-size: 5rem;
-
-    transition: all 300ms;
-}
-
-.image_goes_here svg:hover {
+.genre_checkbox_group label {
+    font-size: 1.7rem;
     color: var(--primary);
+    font-weight: 700;
+    letter-spacing: 0.1rem;
 }
