The steck of the moving Media from one list to another works, need to get the mediaId working

--- a/src/Components/RenderMedia.css
+++ b/src/Components/RenderMedia.css
@@ -24,6 +24,7 @@ ul {
     padding: 0.625rem;
     background-color: var(--grey-1);
     color: #fff;
+    position: relative;
 }
 
 /* Style for the media item image */
