Added more unit tests, fixed the bug with drag between the list on Fav page

--- a/src/Components/RenderMedia.css
+++ b/src/Components/RenderMedia.css
@@ -75,3 +75,10 @@ ul {
 .remove-media-button svg {
     font-size: 3rem;
 }
+.dragging {
+    opacity: 0.5;
+}
+
+.droppable {
+    background-color: #606c61;
+}
