--- a/src/Components/Forms/Form.module.css
+++ b/src/Components/Forms/Form.module.css
@@ -3,7 +3,7 @@
     justify-content: center;
     gap: 2rem;
     background-color: var(--grey-1);
-    padding: 8rem 0;
+    padding: 2rem 0;
 }
 
 .form {
@@ -15,15 +15,15 @@
 .form p {
     display: inline-block;
     margin: 1rem 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     color: red;
 }
 
 .form input,
 .form select {
-    padding: 0.7rem 0.5rem;
+    padding: 0.5rem 0.5rem;
     background-color: var(--primary);
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     font-weight: 500;
     border: 0.2rem solid white;
     border-radius: 0.4rem;
@@ -42,7 +42,7 @@
 
 .form label {
     font-weight: 500;
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: white;
     margin-bottom: 0.5rem;
 }
@@ -53,7 +53,7 @@
     justify-content: center;
     background-color: var(--grey-4);
     border-radius: 1rem;
-    width: 25%;
+    width: 21.5%;
 }
 
 .image_holder img {
@@ -63,7 +63,8 @@
 
 .genres {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 1rem;
 }
 
 .genre_checkbox_group {
@@ -72,7 +73,7 @@
 }
 
 .genre_checkbox_group label {
-    font-size: 1.7rem;
+    font-size: 1.2rem;
     color: var(--primary);
     font-weight: 700;
     letter-spacing: 0.1rem;
@@ -85,6 +86,11 @@
 }
 
 .form_group {
+    display: flex;
+    flex-direction: column;
+}
+
+.form_page {
     display: flex;
     flex-direction: column;
 }
