--- a/src/Components/FilterByGenre/FilterByGenre.module.css
+++ b/src/Components/FilterByGenre/FilterByGenre.module.css
@@ -1,10 +1,42 @@
 .checkbox_group {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    column-gap: 1rem;
+    padding: 5px 0px 0px 5px;
 }
 
 .checkbox label {
     font-size: 1.5rem;
+    font-weight: 550;
+}
+
+.filter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--primary);
+    padding-bottom: 5px;
+}
+
+.filter_button {
+    font-weight: 550;
+    font-size: 2rem;
+    width: 8rem;
+    height: 3rem;
+
+    border-radius: 0.9rem;
+    border: none;
+
+    transition: all 300ms;
+}
+
+.filter_button {
+    color: white;
+    background-color: var(--grey-2);
+}
+
+.filter_button:hover {
+    color: var(--grey-2);
+    background-color: transparent;
+    box-shadow: inset 0 0 0 0.4rem var(--grey-2);
 }
