--- a/src/Pages/Header.css
+++ b/src/Pages/Header.css
@@ -1,6 +1,6 @@
 .header-container {
     background-color: transparent;
-    color: black;
+    color: white;
     position: fixed;
     top: 0;
     right: 0;
@@ -8,29 +8,48 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    gap: 11rem;
     align-items: center;
     width: 80px;
+    padding-right: 3rem;
+}
+
+.watchlist {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.watchlist h5 {
+    font-size: 2rem;
+    font-weight: 600;
 }
 
 h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 5rem;
 }
 
 .save-button {
-    background-color: #4caf50;
-    color: white;
-    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    font-size: 1.8rem;
+    padding: 1rem 2rem;
     border: none;
     border-radius: 4px;
     cursor: pointer;
+
+    transition: all 300ms;
 }
 
 .save-button:hover {
-    background-color: #45a049;
+    background-color: #bebebe;
 }
 
-.save-button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
+.edit-lamp {
+    font-size: 5rem;
+}
+
+.edit-lamp svg {
+    color: white;
 }
